mapperlardaki eksiklikler yapıldı