@@ -9,6 +9,7 @@ import com.example.BootCampProject.service.dtos.responses.employee.CreatedEmploy
 import com.example.BootCampProject.service.dtos.responses.employee.GetAllEmployeeResponse;
 import com.example.BootCampProject.service.dtos.responses.employee.GetEmployeeResponse;
 import com.example.BootCampProject.service.dtos.responses.employee.UpdatedEmployeeResponse;
+import com.example.BootCampProject.service.mappers.EmployeeMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -16,48 +17,51 @@ import java.util.stream.Collectors;
 @Service
 public class EmployeeServiceImpl implements EmployeeService {
     private final EmployeeRepository employeeRepository;
-    public EmployeeServiceImpl(EmployeeRepository employeeRepository) {
-        this.employeeRepository = employeeRepository;
-    }
-    @Override
-    public CreatedEmployeeResponse add(CreatedEmployeeRequest requests) {
-        Employee employee = new Employee();
-        employee.setPosition(requests.getPosition());
-        Employee createEmployee = employeeRepository.save(employee);
+    private final EmployeeMapper employeeMapper;
 
-        CreatedEmployeeResponse responses = new CreatedEmployeeResponse();
-        responses.setPosition(createEmployee.getPosition());
-        return responses;
+    public EmployeeServiceImpl(EmployeeRepository employeeRepository, EmployeeMapper employeeMapper) {
+
+        this.employeeRepository = employeeRepository;
+        this.employeeMapper = employeeMapper;
+    }
+
+    @Override
+    public CreatedEmployeeResponse add(CreatedEmployeeRequest request) {
+        Employee employee = employeeMapper.createRequestToEmployee(request);
+        employeeRepository.save(employee);
+        return employeeMapper.employeeToCreateResponse(employee);
     }
 
     @Override
     public List<GetAllEmployeeResponse> getAll() {
-        return employeeRepository.findAll().stream()
-                .map(this::mapToResponse).collect(Collectors.toList());
-
+        List<Employee> employees = employeeRepository.findAll();
+        return employees.stream()
+                .map(employeeMapper::employeeToGetAllResponse)
+                .toList();
     }
 
     @Override
-    public UpdatedEmployeeResponse update(UpdatedEmployeeRequest requests) {
-        Employee employee = new Employee();
-        employee.setPosition(requests.getPosition());
-        Employee updateEmployee = employeeRepository.save(employee);
-        UpdatedEmployeeResponse responses = new UpdatedEmployeeResponse();
-        responses.setPosition(updateEmployee.getPosition());
-        return responses;
+    public UpdatedEmployeeResponse update(UpdatedEmployeeRequest updatedEmployeeRequest) {
+
+        Employee employee = employeeMapper.updateRequestToEmployee(updatedEmployeeRequest);
+        employeeRepository.save(employee);
+        return employeeMapper.employeeToUpdateResponse(employee);
     }
 
 
     @Override
     public void delete(int id) {
-        employeeRepository.deleteById(id);
+        Employee employee = employeeRepository.findById(id)
+                        .orElseThrow(() -> new RuntimeException("Employee not found with id: " + id));
+        employeeRepository.delete(employee);
 
     }
 
     @Override
     public GetEmployeeResponse getByName(String name) {
-
-        return null;
+        Employee employee = employeeRepository.findByName(name)
+                .orElseThrow(() -> new RuntimeException("Employee not found with name: " + name));
+        return employeeMapper.employeeToGetResponse(employee);
     }
 
     private GetAllEmployeeResponse mapToResponse(Employee employee) {
